Improve mobile sidebar closing and user card rendering